--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
   <div class="caixa-resultado">
     <p class="texto-resultado"></p>
   </div>
-  
 </div>  
-<script></script>
+  <script src=”nsei.js”></script>
       </body>
     </head>
 </html>
