--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width-device-width, inicial-scale=1.0">
-      <link rel="stylesheet" href="style.css">
-      <title>Você decide o futuro da IA</title>
-      
-      <body >
-<div class="caixa-principal">
-  <h1>Você decide o futuro da IA</h1>
-  <div class="caixa-pergunta"></div>
-  <div class="caixa-alternativas"></div>
-  <div class="caixa-resultado">
-    <p class="texto-resultado"></p>
-  </div>
-</div>  
-  <script src=”nsei.js”></script>
-      </body>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Você decide o futuro da IA</title>
+</head>
+<body>
+    <div class="caixa-principal">
+        <h1>Você decide o futuro da IA</h1>
+        <div class="caixa-perguntas"></div>
+        <div class="caixa-alternativas"></div>
+        <div class="caixa-resultado">
+            <p class="texto-resultado"></p>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
 </html>
