--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
             <p class="texto-resultado"></p>
         </div>
     </div>
-    
+    <script src="script.js"></script>
 </body>
 
 </html>
+
